<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/after_noon"
    tools:context=".MainActivity">


    <!-- Tarih TextView -->


    <!-- Şehir TextView -->

    <!-- Sicaklik TextView -->

    <!-- C sıcaklık birimi TextView -->

    <!-- Hava Durumu İkonu ImageView -->

    <!-- Açıklama TextView -->

    <Spinner
        android:id="@+id/spinner"
        style="@style/Spinner"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:padding="8dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tvTarih"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAciklama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/ya_murlu"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSicaklik" />

    <ImageView
        android:id="@+id/imgHavaDurumu"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:contentDescription="Weather Icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvSicaklik"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393"
        app:srcCompat="@drawable/icon_02"
        tools:ignore="ContentDescription,HardcodedText,ImageContrastCheck" />

    <TextView
        android:id="@+id/tvTarih"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/tarih"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvSicaklik"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvSehir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/ankara"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAciklama" />

    <TextView
        android:id="@+id/tvSicaklik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_13"
        android:textSize="100sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.355" />

    <TextView
        android:id="@+id/tvDerece"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvSicaklik"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:layout_constraintVertical_bias="0.283" />

</androidx.constraintlayout.widget.ConstraintLayout>
